<resources>
    <string name="app_name">Locker Assistant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_la_add">Add Entry</string>
    <string name="nav_la_flags">Flags</string>
    <string name="nav_la_view">View Contents</string>
    <string name="nav_la_users">View Users</string>

    <string name="action_settings">Settings</string>

    <string name="menu_dev_db_view">/dev.view</string>
    <string name="menu_dev_dv_add">/dev.add</string>
    <string name="menu_dev_db_list_lp_delete">Delete</string>

    <string name="dev_db_edit_title">Subject</string>
    <string name="dev_db_edit_body">Issue or comment&#8230;</string>
    <string name="dev_db_edit_subject">Specific Activity?</string>
    <string name="dev_db_edit_status">Status</string>
    <string name="dev_db_edit_confirm">CONFIRM</string>
    <string name="dev_db_edit_time">TIME</string>
    <string name="dev_db_edit_date">DATE</string>
    <string name="dev_db_list_noEntries">No Entries!</string>
    <string name="dev_db_label">Developer\'s Database</string>

    <string name="dev_db_nav_add">Db Entry</string>
    <string name="dev_db_nav_priorities">Priorities</string>
    <string name="dev_db_nav_return">Return to App</string>

</resources>
